# tarnung

./: .gitignore  LICENSE  README.md  config.yml  main.py  pyproject.toml  requirements.txt
tarnung/: __init__.py  __main__.py  tarnung.py
